$Id$

2010.06.25 [Jacques]
  * remove gtkInit.cmo from gdk_pixbuf_mlsource, no need to
    initialize Gtk as Gobject is sufficient
  * in GtkThread, add a timeout to allow thread switch in Gtk

2010.06.08 [Jacques]
  * correct interfaces due to the fixing of an unsoundness bug in ocaml 3.12
    (cf. http://caml.inria.fr/mantis/view.php?id=4824) 

In Lablgtk-2.14.1:

2010.05.20 [Jacques]
  * update unison patch to 2.40.16 (for Quartz users)

2010.05.18 [Jacques]
  * rename gtkSignal.ml to gtkSignal.ml4 and fix depend target
  * move Glib.Utf8 code to gutf8.ml, so that it can be used in xml_lexer
    to fix a bug report by Pascal Brisset (multibyte entities of the form
    &#x25CF; in glade files).

2010.04.08 [Jacques]
  * remove useless methods (discovered by ocaml 3.12)

2010.01.14 [Benjamin]
  * Apply patch from Mike Spivey to support get_visible range in Gtree
  * Fixed incorrect target labgtkspell.cmxs in Makefile

2009.10.01 [Jacques]
  * Correct wrong module name SourceViewEnums -> SourceView2Enums

In Lablgtk-2.14.0:

2009.09.25 [Jacques]
  * Ensure compilation under windows

2009.09.22 [Benjamin]
  * Restore compatibility with pre-3.11 OCaml versions
2009.09.01 [Benjamin]
  * Apply patch from Mike Spivey:
    * Access to StyleSchemeManager objects
    * Some attributes are strings and not string options.  This seems
      sensible.
    * Languages and style schemes are treated alike in creating buffers:
      both arguments are wrapped.
    * draw_spaces deals with a list of flags, not a single flag.
    * Mark categories can have priorities, icons and backgrounds
    * Some attributes of languages are accessed by methods instead of
      properties to work around a GTK bug.

2009.09.01 [Benjamin]
  * Support for GtkSourceView 2.6 in library "lablgtksourceview2"
  * Support for GtkSourceView 1.x is still available in library 
    "lablgtksourceview" but it is no longer linked into the lablgtk2 